@@ -1,3 +1,8 @@
+2018-03-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkmisc.c (cygwin_premain0, cygwin_premain2): Restored for
+	use in MSYS environment only.
+
 2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.2.1: Release tar ball made.
